tests: add api tests
